--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.BasicBankingProject"
         tools:targetApi="31">
         <activity
+            android:name=".TransactionHistoryActivity"
+            android:theme="@style/AppThemeNoActionBar"
+            android:exported="false" />
+        <activity
             android:name=".SendUserActivity"
             android:exported="false" />
         <activity
@@ -22,7 +26,7 @@
         <activity
             android:name=".UserListActivity"
             android:exported="false"
-            android:theme="@style/AppThemeNoActionBar" />
+           />
         <activity
             android:name=".MainActivity"
             android:exported="true"
