--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             android:exported="false" />
         <activity
             android:name=".SendUserActivity"
+            android:theme="@style/AppThemeNoActionBar"
             android:exported="false" />
         <activity
             android:name=".UserDataActivity"
